wip: less noise

--- a/README.adoc
+++ b/README.adoc
@@ -57,7 +57,7 @@ For general projects (or also server-side) you can use the root config which is 
 
 ## Plugins
 
-#### `fp` (https://github.com/jfmengels/eslint-plugin-fp[↗])
+#### `fp` https://github.com/jfmengels/eslint-plugin-fp[↗]
 Provides rules that help enforce functional programming.
 
 **Talks around FP**
@@ -72,15 +72,15 @@ Provides rules that help enforce functional programming.
 * https://github.com/stoeffel/awesome-fp-js[Awesome FP JS] list
 * http://blog.wolksoftware.com/the-rise-of-functional-programming-and-the-death-of-angularjs[The rise of functional programming & the decline of Angular 2.0]
 
-#### `import` (https://github.com/benmosher/eslint-plugin-import[↗])
+#### `import` https://github.com/benmosher/eslint-plugin-import[↗]
 Provides rules that help prevent import bugs and enforces style.
 
-#### `vue` (https://github.com/vuejs/eslint-plugin-vue[↗])
+#### `vue` https://github.com/vuejs/eslint-plugin-vue[↗]
 Currently, the sole purpose of having this plugin is to parse https://vuejs.org/v2/guide/single-file-components.html[`.vue` files]. Also, it https://github.com/vuejs/eslint-plugin-vue/issues/1[does not support] eslint's `--fix` feature.
 
 ## Extends
 
-#### Rules of AirBnB (https://github.com/airbnb/javascript[↗])
+#### Rules of AirBnB https://github.com/airbnb/javascript[↗]
 
 We extend the AirBnB rules for historical reasons. Our configuration will continue to evolve and may not be based on it one day if we eventually disable or adjust too much of it via overrides.
 
